--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Blog do Futebol Capixaba</title>
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -32,7 +32,7 @@
       <section class="grid-cards" aria-label="Destaques">
         <article class="card">
           <a href="classicos.html" class="card-link">
-            <img src="assets/img/destaque_classico.jpg" alt="Bandeirões em clássico capixaba" />
+            <img src="destaque_classico.jpg" alt="Bandeirões em clássico capixaba" />
             <div class="card-body">
               <h2>Clássicos Capixabas</h2>
               <p>Conheça as maiores rivalidades do nosso estado, como Rio Branco x Desportiva.</p>
@@ -42,7 +42,7 @@
 
         <article class="card">
           <a href="orgulho.html" class="card-link">
-            <img src="assets/img/destaque_orgulho.jpg" alt="Richarlison e Savinho comemorando em campo" />
+            <img src="destaque_orgulho.jpg" alt="Richarlison e Savinho comemorando em campo" />
             <div class="card-body">
               <h2>Orgulho Capixaba</h2>
               <p>Conheça as trajetórias de Richarlison e Savinho, craques capixabas que conquistaram o mundo.</p>
@@ -52,7 +52,7 @@
 
         <article class="card">
           <a href="estadios.html" class="card-link">
-            <img src="assets/img/destaque_estadio.jpg" alt="Arquibancadas lotadas" />
+            <img src="destaque_estadio.jpg" alt="Arquibancadas lotadas" />
             <div class="card-body">
               <h2>Estádios e Torcidas</h2>
               <p>Explore os estádios mais importantes e a energia das torcidas capixabas.</p>
@@ -77,3 +77,4 @@
     <script> new window.VLibras.Widget('https://vlibras.gov.br/app'); </script>
   </body>
 </html>
+
