Fix HTML structure and update image paths

--- a/orgulho.html
+++ b/orgulho.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Orgulho Capixaba — Blog do Futebol Capixaba</title>
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="site-header">
@@ -31,7 +31,7 @@
 
         <h2>Richarlison de Andrade</h2>
         <figure>
-          <img src="assets/img/richarlison.jpg" alt="Richarlison marcando gol pelo Brasil">
+          <img src="richarlison.jpg" alt="Richarlison marcando gol pelo Brasil">
           <figcaption>Richarlison em ação pela Seleção Brasileira — imagem ilustrativa.</figcaption>
         </figure>
         <p>Nascido em Nova Venécia (ES) em 1997, Richarlison iniciou sua trajetória com o sonho de ajudar a família e
@@ -44,7 +44,7 @@
 
         <h2>Sávio “Savinho” Moreira de Oliveira</h2>
         <figure>
-          <img src="assets/img/savinho.jpeg" alt="Savinho jogando pelo Manchester City">
+          <img src="savinho.jpeg" alt="Savinho jogando pelo Manchester City">
           <figcaption>Savinho, destaque capixaba no futebol europeu — Manchester City.</figcaption>
         </figure>
         <p>Nascido em São Mateus (ES) em 2004, Savinho é um dos nomes mais promissores da nova geração brasileira.
@@ -68,3 +68,4 @@
     </footer>
   </body>
 </html>
+
