--- a/classicos.html
+++ b/classicos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Clássicos Capixabas</title>
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="site-header">
@@ -33,7 +33,7 @@
         nos pênaltis, levando a taça do Capixabão.</p>
 
         <figure>
-          <img src="assets/img/classico.jpg" alt="Torcida em clássico capixaba">
+          <img src="classico.jpg" alt="Torcida em clássico capixaba">
           <figcaption>Torcedores no Estádio Kleber Andrade — Cariacica/ES.</figcaption>
         </figure>
       </article>
@@ -46,3 +46,4 @@
     </footer>
   </body>
 </html>
+
